--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,208 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
+}
+/* main page css */
+.Container {
+  display: flex;
+  min-height: 100vh;
+  justify-content: space-around;
+  background-color: #0c131b;
+  padding-left: 2em;
+  padding-right: 2em;
+  gap: 1em;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.leftside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3em;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+  width: 100%;
+  background-color: #14222f;
+  border-bottom: 5px solid #ff5261;
+  color: azure;
+  justify-content: center;
+}
+
+.rightside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* end of main page css */
+/* BLACKLISTED COMPONENT */
+.BlacklistContainer {
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+  max-height: 600px;
+  border: 4px solid #ff5261;
+  border-radius: 5%;
+  background-color: #14222f;
+  color: azure;
+}
+
+.radioButtons {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  justify-content: center;
+  gap: 0.5em;
+}
+
+.radiorow {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 125px;
+}
+
+.champform {
+  display: flex;
+  flex-direction: column;
+}
+
+.listofblacklisted {
+  overflow-y: auto;
+  max-width: 200px;
+  justify-content: center;
+  align-items: center;
+}
+
+.blacklistedchampions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 5px solid #a79461;
+  gap: 0.5em;
+  padding: 0.5em;
+}
+
+/* END OF BL COMPONENT */
+/* START OF LEAGUE MAP COMPONENT */
+.mapcontainer {
+  border: 5px solid black;
+  justify-content: center;
+  background-color: black;
+  max-height: 650px;
+  border-radius: 30%;
+  position: relative;
+}
+
+.lanebutton {
+  z-index: 9999 !important;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.lanebutton button {
+  border: none;
+  cursor: pointer;
+  appearance: none;
+  background: linear-gradient(-45deg, #1a688d, #4b2041, #1a688d, #4b2041);
+  background-size: 200% 100%;
+  animation: animateBg 15s infinite linear;
+  border-radius: 50%;
+  border: 2px solid #a79461;
+}
+
+@keyframes animateBg {
+  0% {
+    background-position: 0% 50%;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.lanebutton button img {
+  width: 30px;
+  padding: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+.lanebutton button {
+  transition: transform 0.3s ease-in-out;
+}
+.lanebutton button:hover {
+  transform: scale(1.2);
+}
+.Top {
+  left: 33%;
+  top: 13%;
 }
 
-.read-the-docs {
-  color: #888;
+.Mid {
+  left: 49%;
+  top: 33%;
+}
+
+.Bot {
+  left: 70%;
+  top: 50%;
+}
+
+.Support {
+  left: 75%;
+  top: 60%;
+}
+
+.Jungle {
+  left: 48%;
+  top: 19%;
+}
+
+/* END OF LEAGUE MAP COMPONENT */
+/* bottom buttons */
+.download {
+  background-color: #ff5261;
+  padding: 0.3em;
+  border: 5px solid #1a688d;
+  color: azure;
+}
+
+.random {
+  background-color: #ff5261;
+  padding: 1em;
+  width: 350px;
+  border: 5px solid #1a688d;
+  color: azure;
+}
+/* end of bottom buttons */
+
+.playcontainer {
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+  max-height: 600px;
+  border: 4px solid #ff5261;
+  border-radius: 5%;
+  background-color: #14222f;
+  color: azure;
 }
