--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,7 +52,7 @@
   align-items: center;
   gap: 1em;
   padding: 1em;
-  max-height: 600px;
+  max-height: 700px;
   border: 4px solid #ff5261;
   border-radius: 5%;
   background-color: #14222f;
@@ -192,7 +192,7 @@
   color: azure;
 }
 /* end of bottom buttons */
-
+/* LEFT SIDE */
 .playcontainer {
   display: flex;
   flex-direction: column;
@@ -200,9 +200,30 @@
   align-items: center;
   gap: 1em;
   padding: 1em;
-  max-height: 600px;
+  height: 500px;
   border: 4px solid #ff5261;
   border-radius: 5%;
   background-color: #14222f;
   color: azure;
+}
+/* END LEFT SIDE */
+/* Modal */
+.chosencontainer {
+  display: flex;
+  flex-direction: row;
+  max-width: 450px;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+  max-height: 600px;
+  border: 5px solid #ff5261;
+  background-color: #14222f;
+  color: azure;
+  z-index: 9999 !important;
+  position: absolute;
+  top: 400px;
+}
+
+.chosencontainer img {
+  width: 75px;
 }
