--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,14 @@
 * {
   margin: 0;
 }
+body {
+  background-color: #0c131b;
+}
 /* main page css */
 .Container {
   display: flex;
   min-height: 100vh;
   justify-content: space-around;
-  background-color: #0c131b;
   padding-left: 2em;
   padding-right: 2em;
   gap: 1em;
@@ -30,7 +32,6 @@
   display: flex;
   flex-direction: row;
   height: fit-content;
-  width: 100%;
   background-color: #14222f;
   border-bottom: 5px solid #ff5261;
   color: azure;
@@ -107,7 +108,7 @@
 }
 
 .lanebutton {
-  z-index: 9999 !important;
+  z-index: 9998 !important;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -205,13 +206,14 @@
   border-radius: 5%;
   background-color: #14222f;
   color: azure;
+  margin-bottom: 5em;
 }
 /* END LEFT SIDE */
 /* Modal */
 .chosencontainer {
   display: flex;
   flex-direction: row;
-  max-width: 450px;
+  max-width: 550px;
   align-items: center;
   gap: 1em;
   padding: 1em;
@@ -224,6 +226,25 @@
   top: 400px;
 }
 
-.chosencontainer img {
+.imgdiv img {
   width: 75px;
+}
+
+.middlediv {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  align-items: center;
+}
+.middlediv button {
+  width: 100px;
+}
+
+.popup {
+  z-index: 9998 !important;
+  width: 100vw;
+  height: 100vh;
+  background-color: #222222;
+  opacity: 95%;
+  position: absolute;
 }
