--- a/client/src/App.css
+++ b/client/src/App.css
@@ -272,6 +272,23 @@ body {
   gap: 0.5em;
 }
 
+.list::-webkit-scrollbar {
+  width: 12px;
+}
+
+.list::-webkit-scrollbar-track {
+  background-color: #0c131b;
+}
+
+.list::-webkit-scrollbar-thumb {
+  background-color: #ff5261;
+  border-radius: 6px;
+}
+
+.list::-webkit-scrollbar-thumb:hover {
+  background-color: #a79461;
+}
+
 .list img {
   width: 35px;
   margin-right: 0.5em;
