--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,11 +54,12 @@ body {
   align-items: center;
   gap: 1em;
   padding: 1em;
-  max-height: 700px;
+  height: 550px;
   border: 4px solid #ff5261;
   border-radius: 5%;
   background-color: #14222f;
   color: azure;
+  margin-bottom: 5em;
 }
 
 .radioButtons {
@@ -202,7 +203,7 @@ body {
   align-items: center;
   gap: 1em;
   padding: 1em;
-  height: 500px;
+  height: 550px;
   border: 4px solid #ff5261;
   border-radius: 5%;
   background-color: #14222f;
