--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,13 @@
 * {
   margin: 0;
 }
+
 body {
   background-color: #0c131b;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
 }
+
 /* main page css */
 .Container {
   display: flex;
@@ -14,7 +18,14 @@ body {
   gap: 1em;
 }
 
-.leftside {
+.leftside,
+.rightside,
+.main {
+  flex: 1;
+}
+
+.leftside,
+.rightside {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,13 +47,7 @@ body {
   border-bottom: 5px solid #ff5261;
   color: azure;
   justify-content: center;
-  width: 100%;
-}
-
-.rightside {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100bw;
 }
 
 /* end of main page css */
@@ -186,9 +191,11 @@ body {
 .lanebutton button {
   transition: transform 0.3s ease-in-out;
 }
+
 .lanebutton button:hover {
   transform: scale(1.2);
 }
+
 .Top {
   left: 33%;
   top: 13%;
@@ -216,20 +223,21 @@ body {
 
 /* END OF LEAGUE MAP COMPONENT */
 /* bottom buttons */
-.download {
-  background-color: #ff5261;
-  padding: 0.3em;
-  border: 5px solid #1a688d;
-  color: azure;
-}
-
+.download,
 .random {
   background-color: #ff5261;
   padding: 1em;
-  width: 350px;
   border: 5px solid #1a688d;
   color: azure;
+  width: 100%;
+  text-align: center;
 }
+
+.random {
+  width: 350px;
+  font-size: medium;
+}
+
 /* end of bottom buttons */
 /* LEFT SIDE */
 .playcontainer {
@@ -250,8 +258,8 @@ body {
 /* Modal */
 .chosencontainer {
   display: flex;
-  flex-direction: row;
-  width: 600px;
+  flex-direction: column;
+  width: 100%;
   align-items: center;
   gap: 1em;
   padding: 1em;
@@ -279,6 +287,7 @@ body {
   align-items: center;
   flex: 2;
 }
+
 .middlediv button {
   width: 100px;
   background-color: #a79461;
@@ -293,10 +302,12 @@ body {
   opacity: 95%;
   position: absolute;
 }
+
 .rightdiv {
   margin-bottom: 150px;
   flex: 0.25;
 }
+
 .rightdiv button {
   background-color: #a79461;
   color: aliceblue;
@@ -357,3 +368,32 @@ ul {
   margin-left: auto;
 }
 /* end of playable */
+
+/* Media Queries */
+@media screen and (max-width: 850px) {
+  .Container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .leftside,
+  .rightside {
+    margin-bottom: 2em;
+  }
+
+  .playcontainer,
+  .BlacklistContainer {
+    width: 90%;
+    max-width: 90%;
+    margin-bottom: 2em;
+  }
+
+  .chosencontainer {
+    width: 90%;
+    max-width: 90%;
+  }
+
+  .Main {
+    padding: 1em;
+  }
+}
